--- a/current/mrp-releases.json
+++ b/current/mrp-releases.json
@@ -16,7 +16,7 @@
     "release_date": "3 August 2023",
     "requirements": [
       "AppEngine 2.10.12.1",
-      "CompuTec ProcessForce 10.0 Release 21 (R21)",
+      "CompuTec ProcessForce 10.0 from Release 21 (R21) to Release 21 (R21)",
       "Production Process Flow Plugin 1.10.8"
     ],
     "download_url": "https://download.computec.one/software/appengine/plugins/mrp/releases/CompuTec_MRP_1.10.10.4.zip"
@@ -27,7 +27,7 @@
     "release_date": "11 May 2023",
     "requirements": [
       "AppEngine 2.10.10.1",
-      "CompuTec ProcessForce 10.0 Release 18 (R18)",
+      "CompuTec ProcessForce 10.0 from Release 18 (R18) to Release 21 (R21)",
       "Production Process Flow Plugin 1.10.8"
     ],
     "download_url": "https://download.computec.one/software/appengine/plugins/mrp/releases/CompuTec_MRP_1.10.9.1.zip"
